[gd_scene load_steps=3 format=3 uid="uid://bqx8y2htiqk_pause"]

[ext_resource type="Script" path="res://Scripts/WorldScripts/pause_menu.gd" id="1_pause"]
[ext_resource type="Theme" uid="uid://b482uksqacwcy" path="res://Scenes/components/game_theme.tres" id="2_theme"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.182419, 0.0441304, 0.192746, 0.9)

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MainContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="SettingsButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="AchievementsButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Achievements"

[node name="MainMenuButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit Game"
